--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
